--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js"
       type="text/javascript"
@@ -29,10 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Virtual Smart Home</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Project based by Graham Coulby for students on IoT module to demonstrate MQTT Pub/Sub Methods</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
